[gd_scene load_steps=13 format=3 uid="uid://sh62rfw7ulr8"]

[ext_resource type="Shader" path="res://Art/tile_overall_shader.gdshader" id="1_5p8y7"]
[ext_resource type="Script" path="res://Scripts/Battle/unit_form.gd" id="1_ep020"]
[ext_resource type="Texture2D" uid="uid://ptkmhxptot0q" path="res://Art/player_colors/blue_color.png" id="2_0q625"]
[ext_resource type="Texture2D" uid="uid://cukwcwy4fikm1" path="res://Art/units/elf/elf_hero_noble.png" id="3_3flaq"]
[ext_resource type="Texture2D" uid="uid://by6lxadhw2amf" path="res://Art/items/hex_border_light.png" id="4_0xhp4"]
[ext_resource type="PackedScene" uid="uid://bc4yv21yc35fw" path="res://Scenes/Form/SymbolForm.tscn" id="5_2gor3"]
[ext_resource type="Texture2D" uid="uid://bxt8qblt76cyj" path="res://Art/magic/mana_icon.png" id="7_cnn68"]
[ext_resource type="Texture2D" uid="uid://1hbpqpqeo60k" path="res://Art/magic/spell_icons/blood_curse.png" id="7_vgjoi"]
[ext_resource type="Texture2D" uid="uid://cifsoyagq2aaw" path="res://Art/magic/spell_icons/vengence.png" id="8_3kkm8"]
[ext_resource type="Texture2D" uid="uid://cb6b5qgltj1bc" path="res://Art/battle_map/swamp.png" id="8_i7m4u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_djiqc"]
resource_local_to_scene = true
shader = ExtResource("1_5p8y7")
shader_parameter/highlight_intensity = 0.0
shader_parameter/contrast_boost = 0.0
shader_parameter/modulate_intensity = 0.0
shader_parameter/modulate_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sftpy"]
resource_local_to_scene = true
shader = ExtResource("1_5p8y7")
shader_parameter/highlight_intensity = 0.0
shader_parameter/contrast_boost = 0.0
shader_parameter/modulate_intensity = 0.0
shader_parameter/modulate_color = Color(1, 1, 1, 1)

[node name="Unit" type="Node2D"]
material = SubResource("ShaderMaterial_djiqc")
script = ExtResource("1_ep020")

[node name="sprite_color" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("2_0q625")

[node name="sprite_unit" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("3_3flaq")

[node name="sprite_border" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_sftpy")
texture = ExtResource("4_0xhp4")

[node name="Symbols" type="Node2D" parent="."]
use_parent_material = true

[node name="FrontSymbol" type="Marker2D" parent="Symbols"]
use_parent_material = true
position = Vector2(-775, 1)

[node name="SymbolForm" parent="Symbols/FrontSymbol" instance=ExtResource("5_2gor3")]
use_parent_material = true

[node name="FrontRightSymbol" type="Marker2D" parent="Symbols"]
use_parent_material = true
position = Vector2(-386, -673)
rotation = 1.0472

[node name="SymbolForm" parent="Symbols/FrontRightSymbol" instance=ExtResource("5_2gor3")]
use_parent_material = true

[node name="BackRightSymbol" type="Marker2D" parent="Symbols"]
use_parent_material = true
position = Vector2(363, -682)
rotation = 2.0944

[node name="SymbolForm" parent="Symbols/BackRightSymbol" instance=ExtResource("5_2gor3")]
use_parent_material = true

[node name="BackSymbol" type="Marker2D" parent="Symbols"]
use_parent_material = true
position = Vector2(775, 9)
rotation = 3.14159

[node name="SymbolForm" parent="Symbols/BackSymbol" instance=ExtResource("5_2gor3")]
use_parent_material = true

[node name="BackLeftSymbol" type="Marker2D" parent="Symbols"]
use_parent_material = true
position = Vector2(405, 661)
rotation = 4.18879

[node name="SymbolForm" parent="Symbols/BackLeftSymbol" instance=ExtResource("5_2gor3")]
use_parent_material = true

[node name="FrontLeftSymbol" type="Marker2D" parent="Symbols"]
use_parent_material = true
position = Vector2(-362, 684)
rotation = 5.23599

[node name="SymbolForm" parent="Symbols/FrontLeftSymbol" instance=ExtResource("5_2gor3")]
use_parent_material = true

[node name="RigidUI" type="Node2D" parent="."]
use_parent_material = true

[node name="ManaIcon" type="Sprite2D" parent="RigidUI"]
use_parent_material = true
position = Vector2(1, 639)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_cnn68")

[node name="UnitLevel" type="Label" parent="RigidUI"]
use_parent_material = true
offset_left = -567.0
offset_top = -433.0
offset_right = -423.0
offset_bottom = -256.0
theme_override_font_sizes/font_size = 150
text = "IV"
metadata/_edit_use_anchors_ = true

[node name="UnitMana" type="Label" parent="RigidUI"]
use_parent_material = true
offset_left = -66.0
offset_top = 592.0
offset_right = 78.0
offset_bottom = 769.0
theme_override_font_sizes/font_size = 150
text = "II"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SpellEffect1" type="Sprite2D" parent="RigidUI"]
use_parent_material = true
position = Vector2(503, -293)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_vgjoi")

[node name="SpellEffect2" type="Sprite2D" parent="RigidUI"]
use_parent_material = true
position = Vector2(503, 302)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_3kkm8")

[node name="TerrainEffect" type="Sprite2D" parent="RigidUI"]
use_parent_material = true
position = Vector2(-515, 11)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_i7m4u")

[node name="SpellEffectCounter1" type="Label" parent="RigidUI"]
use_parent_material = true
offset_left = 336.0
offset_top = -411.0
offset_right = 376.0
offset_bottom = -335.0
scale = Vector2(3, 3)
theme_override_font_sizes/font_size = 64
text = "6"
metadata/_edit_use_anchors_ = true

[node name="SpellEffectCounter2" type="Label" parent="RigidUI"]
use_parent_material = true
offset_left = 344.0
offset_top = 246.0
offset_right = 384.0
offset_bottom = 322.0
scale = Vector2(3, 3)
theme_override_font_sizes/font_size = 64
text = "6"
metadata/_edit_use_anchors_ = true
